--- a/druid/manifest.json
+++ b/druid/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": "1.0.0",
   "name": "druid",
   "metric_prefix": "druid.",
-  "metric_to_check": "",
+  "metric_to_check": "druid.process.health",
   "creates_events": false,
   "short_description": "Track metrics related to queries, ingestion, and coordination.",
   "guid": "8abd92f8-7383-45f2-a412-d6ee960baa15",
@@ -16,7 +16,8 @@
   ],
   "public_title": "Datadog-druid Integration",
   "categories": [
-    ""
+    "processing",
+    "data store"
   ],
   "type": "check",
   "is_public": false,
