Add SQL Server e2e tests

--- a/sqlserver/tox.ini
+++ b/sqlserver/tox.ini
@@ -2,15 +2,16 @@
 minversion = 2.0
 basepython = py37
 envlist =
-    py{27,37}-{docker,local,unit}
+    py{27,37}-{docker,local}
 
 [testenv]
 dd_check_style = true
+description =
+    py{27,37}-docker: e2e ready
 usedevelop = true
 platform =
-    unit: linux|darwin|win32
-    docker: linux|darwin
-    local: win32
+    docker: linux|darwin|win32
+    local: darwin  ;win32
 deps =
     -e../datadog_checks_base[deps]
     -rrequirements-dev.txt
@@ -20,8 +21,7 @@ passenv =
     *
 commands =
     pip install -r requirements.in
-    unit: pytest -v -m unit
-    docker: pytest -v -m docker
-    local: pytest -v -m local
+    docker: pytest -v {env:PYTEST_ADDOPTS:-m not local}
+    local: pytest -v {env:PYTEST_ADDOPTS:-m not docker}
 setenv =
     docker: ODBCSYSINI = {toxinidir}/tests/odbc
